Add no-margin and no-width decorator classes for nw-row

--- a/src/grid/grid.scss
+++ b/src/grid/grid.scss
@@ -23,6 +23,14 @@
     clear: both;
   }
 
+  &.no-margin {
+    margin: 0;
+  }
+
+  &.no-width {
+    width: initial;
+  }
+
   &.direction-column {
     flex-direction: column;
     align-items: stretch;
