Add flex-direction helper; Fix breakpoint specific helper class generation

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -19,11 +19,18 @@ $containerSizes: (
 );
 
 $helperProperties: (
+  "flex-direction": flex-direction,
   "align-self": align-self,
   "justify-self": justify-self
 );
 
 $helperValues: (
+  "flex-direction": (
+    "row": row,
+    "row-reverse": row-reverse,
+    "column": column,
+    "column-reverse": column-reverse
+  ),
   "align-self": (
     "auto": auto,
     "stretch": stretch,
